--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  gsheets: ^0.2.0+1
+  url_launcher: ^5.4.2
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
